fix: text display overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .overlay-helper {
-    @apply absolute h-full w-[1px] bg-slate-800 opacity-50;
+    @apply absolute h-full top-0 w-[2px] bg-slate-600 opacity-20;
   }
 }
